# gwt-context

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: _config.yml  attend-failure-analysis.md  attention-controller.md  benchmark-report-v0.3.md  codex-mcp.md  demo-scenarios.md  dogfood-report.md  external-subscribers.md  gwt-runtime-contracts.md  honest-gwt-report.md  index.html  index.md  mcp-tool-contracts.md  publishing.md  quickstart.md  release-baseline.md  release-readiness.md  release-thresholds.md
docs/releases/: v0.2.0.md  v0.2.1.md  v0.2.2.md  v0.3.0-rc1.md  v0.3.0.md
examples/: __init__.py  external_subscriber_poc.py  mcp_demo.py  real_usage_loop.py
research/: DESIGN_RATIONALE.md  README.md  sources.bib
scripts/: clear_codex_memory.py  codex_mcp_bootstrap.py  codex_mcp_health.py  qwen_sanity.py  release_gate.py
src/gwt_context/: __init__.py  __main__.py  mcp_client_smoke.py  server.py  smoke.py
tests/: e2e_multi_hop.py
tests/benchmarks/: README.md  analyze_results.py  bus_matrix.py  config.py  controlled_rules.py  harness.py  longbench_pro.py  regression_smoke.py  render_trace.py  ruler_multi_hop.py
tests/integration/: test_attention_bus_workspace.py  test_cycle.py  test_mcp_client_stdio.py  test_mcp_demo.py  test_mcp_smoke.py  test_real_workload_eval.py  test_server_readiness.py  test_storage.py
tests/unit/: test_application_ports.py  test_attention_controller.py  test_benchmark_analysis.py  test_config.py  (+21 more)
(+20 files in other folders)
