[project]
name = "gwt-context"
version = "0.2.0"
description = "Global Workspace Theory context management MCP server"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "mcp>=1.0",
    "sentence-transformers>=3.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]
bench = [
    "datasets",
    "openai>=1.0",
    "tqdm",
]

[project.scripts]
gwt-context = "gwt_context.server:main"
gwt-context-smoke = "gwt_context.smoke:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/gwt_context"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["^tests/"]
